--- a/src/content/docs/getting-started/index..mdx
+++ b/src/content/docs/getting-started/index..mdx
@@ -28,7 +28,11 @@ To access AI services with Rawi, you need credentials for the provider you want 
 | OpenAI         | OpenAI account, API key                     | Get API key from [OpenAI Platform](https://platform.openai.com/api-keys)              |
 | Anthropic      | Anthropic account, API key                  | Get API key from [Anthropic Console](https://console.anthropic.com/)                  |
 | Google Gemini  | Google account, API key                     | Get API key from [Google AI Studio](https://aistudio.google.com/)                     |
+| DeepSeek       | DeepSeek account, API key                   | Get API key from [DeepSeek Platform](https://platform.deepseek.com/api_keys)          |
+| Mistral        | Mistral account, API key                    | Get API key from [Mistral Console](https://console.mistral.ai/api-keys/)              |
+| Cerebras       | Cerebras account, API key                   | Get API key from [Cerebras Cloud](https://cloud.cerebras.ai)                          |
 | Ollama (local) | None (runs locally)                         | Install [Ollama](https://ollama.ai/) and pull models                                  |
+| LM Studio      | None (runs locally)                         | Install [LM Studio](https://lmstudio.ai/) and download models                         |
 | Azure OpenAI   | Azure subscription, API key, resource name  | See [Azure OpenAI docs](https://learn.microsoft.com/azure/cognitive-services/openai/) |
 | Amazon Bedrock | AWS account, IAM credentials or access keys | Use IAM user or AWS credential chain                                                  |
 | Qwen (Alibaba) | Alibaba Cloud account, API key              |                                                                                       |
