--- a/src/content/docs/help/faq.mdx
+++ b/src/content/docs/help/faq.mdx
@@ -9,12 +9,12 @@ Common questions and answers about Rawi usage, configuration, and troubleshootin
 
 ### What is Rawi?
 
-Rawi is a powerful command-line interface (CLI) tool that brings AI assistance directly to your terminal. It allows you to interact with various AI providers (OpenAI, Anthropic, Google, etc.) to help with coding, writing, analysis, and many other tasks.
+Rawi is a powerful command-line interface (CLI) tool that brings AI assistance directly to your terminal. It allows you to interact with various AI providers (OpenAI, Anthropic, Google, DeepSeek, Mistral, Cerebras, etc.) to help with coding, writing, analysis, and many other tasks.
 
 ### How is Rawi different from other AI tools?
 
 - **Terminal-native**: Works directly in your command line
-- **Multiple providers**: Support for OpenAI, Anthropic, Google, Ollama, and more
+- **Multiple providers**: Support for OpenAI, Anthropic, Google, DeepSeek, Mistral, Cerebras, Ollama, LM Studio, Azure, Bedrock, Qwen, and xAI
 - **Session management**: Maintain conversation context across commands
 - **Act templates**: Pre-built prompts for specific tasks
 - **Shell integration**: Pipe data in/out of other commands
