--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -27,7 +27,7 @@ import {Card, CardGrid, LinkButton} from '@astrojs/starlight/components';
 
 ### Key Features
 
-- 🤖 **9 AI Providers** — OpenAI, Anthropic, Google, Ollama, LM Studio, Azure, Bedrock, Qwen, and xAI
+- 🤖 **12 AI Providers** — OpenAI, Anthropic, Google, DeepSeek, Mistral, Cerebras, Ollama, LM Studio, Azure, Bedrock, Qwen, and xAI
 - 🛡️ **Privacy First** — Local AI support with Ollama and LM Studio
 - ⚡ **Developer Optimized** — Built specifically for coding workflows
 - 🎯 **200+ Templates** — Expert-level prompt templates
