--- a/src/content/docs/getting-started/install.mdx
+++ b/src/content/docs/getting-started/install.mdx
@@ -12,6 +12,16 @@ import {Tabs, TabItem} from '@astrojs/starlight/components';
 
 Get Rawi up and running on your system in just a few minutes.
 
+## 📋 Table of Contents
+
+- [System Requirements](#system-requirements)
+- [Installation Methods](#installation-methods)
+- [Post-Installation Setup](#post-installation-setup)
+- [Verification](#verification)
+- [Next Steps](#next-steps)
+
+---
+
 ## System Requirements
 
 Before installing Rawi, ensure your system meets these requirements:
@@ -28,6 +38,8 @@ node --version
 ```
 
 If you need to install or update Node.js, visit [nodejs.org](https://nodejs.org/).
+
+---
 
 ## Installation Methods
 
@@ -50,7 +62,7 @@ The easiest way to install Rawi globally:
     ```
 
   </TabItem>
-  <TabItem label="yarn" icon="seti:yarn">
+  <TabItem label="yarn" icon="yarn">
 
     ```bash
     yarn global add rawi
@@ -66,575 +78,257 @@ The easiest way to install Rawi globally:
   </TabItem>
 </Tabs>
 
-### Alternative Installation Methods
+### No Installation Required (npx)
 
-#### Using npx (No Installation)
-
-Run Rawi without installing globally:
+Use Rawi without installing it globally:
 
 ```bash
-# Ask a question without installing
-npx rawi ask "What is Docker?"
-
-# Configure without installing
+# Run commands directly with npx
+npx rawi ask "What is TypeScript?"
 npx rawi configure
 ```
 
-#### Development Installation
+### Development Version
 
-For contributing or development:
+Install the latest development version from GitHub:
 
 ```bash
-# Clone the repository
-git clone https://github.com/mkabumattar/rawi.git
+# Clone and install from source
+git clone https://github.com/withrawi/rawi.git
 cd rawi
-
-# Install dependencies
 npm install
-
-# Build the project
 npm run build
-
-# Link for global usage
 npm link
 ```
 
+---
+
+## Post-Installation Setup
+
+After installing Rawi, you'll need to configure at least one AI provider to start using it.
+
+# Link for global usage
+
+npm link
+
+````
+
+### Interactive Configuration (Recommended)
+
+Run the interactive configuration wizard:
+
+```bash
+rawi configure
+````
+
+This will guide you through:
+
+1. Choosing an AI provider
+2. Selecting a model
+3. Entering API credentials
+4. Setting up basic preferences
+
+### Quick Setup Examples
+
+Choose one of these popular options for quick setup:
+
+#### OpenAI (Best for General Use)
+
+```bash
+# Get API key from: https://platform.openai.com/api-keys
+rawi configure \
+  --provider openai \
+  --model gpt-4o \
+  --api-key sk-your-api-key
+```
+
+#### Ollama (Free & Private)
+
+```bash
+# Install Ollama first: https://ollama.com/download
+ollama pull llama3.2
+rawi configure \
+  --provider ollama \
+  --model llama3.2
+```
+
+#### Anthropic Claude (Great for Analysis)
+
+```bash
+# Get API key from: https://console.anthropic.com/
+rawi configure \
+  --provider anthropic \
+  --model claude-3-5-sonnet-20241022 \
+  --api-key sk-ant-your-key
+```
+
+#### DeepSeek (Cost-Effective with Reasoning)
+
+```bash
+# Get API key from: https://platform.deepseek.com/api_keys
+rawi configure \
+  --provider deepseek \
+  --model deepseek-chat \
+  --api-key sk-your-deepseek-key
+```
+
+#### Mistral (European AI)
+
+```bash
+# Get API key from: https://console.mistral.ai/api-keys/
+rawi configure \
+  --provider mistral \
+  --model mistral-large-latest \
+  --api-key your-mistral-key
+```
+
+#### Google Gemini (Fast & Efficient)
+
+```bash
+# Get API key from: https://aistudio.google.com/app/apikey
+rawi configure \
+  --provider google \
+  --model gemini-2.0-flash-exp \
+  --api-key AIza-your-key
+```
+
+---
+
 ## Verification
 
-After installation, verify that Rawi is working correctly:
+After installation and configuration, verify everything is working:
 
 ### Check Installation
 
 ```bash
-# Verify installation
+# Check Rawi version
 rawi --version
 
-# Check available commands
-rawi --help
-
-# Test basic functionality
+# Show system information
 rawi info
+
+# List available commands
+rawi --help
+```
+
+### Test Configuration
+
+```bash
+# Show current configuration
+rawi configure --show
+
+# Test with a simple question
+rawi ask "Hello, can you hear me?"
+
+# Test file processing (if you have a text file)
+echo "This is a test document" > test.txt
+rawi ask --file test.txt "Summarize this content"
+
+# Test template functionality
+rawi ask --act linux-terminal "list current directory contents"
 ```
 
 ### Expected Output
 
+If everything is working correctly, you should see:
+
 ```bash
 $ rawi --version
-rawi/1.0.0 darwin-arm64 node-v20.11.0
+rawi/1.0.0 linux-x64 node-18.17.0
 
-$ rawi info
-🚀 About Rawi (راوي)  https://rawi.mkabumattar.com
-├─ Version: 1.0.0
-├─ Author: Mahmoud Kabumattar
-├─ License: MIT
-└─ Description: AI-powered CLI tool for developers
-
-📊 Configuration Status
-├─ Profiles: 0 configured
-├─ Default Profile: Not set
-├─ Providers: 9 available
-└─ Templates: 200+ expert prompts
+$ rawi ask "Hello"
+🤖 Hello! I can hear you perfectly. I'm ready to help you with questions,
+code review, analysis, or any other tasks you'd like assistance with.
+What can I help you with today?
 ```
 
-## Post-Installation Setup
+---
 
-### Initial Configuration
+## Common Installation Issues
 
-After installation, configure your first AI provider:
+### Permission Errors (Linux/macOS)
+
+If you get permission errors during global installation:
 
 ```bash
-# Interactive setup (recommended)
-rawi configure
-
-# Manual setup example
-rawi configure --provider openai --model gpt-4o --api-key sk-your-key
-```
-
-### Shell Integration (Optional)
-
-Add shell integration for enhanced experience:
-
-#### Bash
-
-Add to your `~/.bashrc`:
-
-```bash
-# Rawi shell integration
-eval "$(rawi completion bash)"
-
-# Useful aliases
-alias ask='rawi ask'
-alias chat='rawi ask --continue'
-```
-
-#### Zsh
-
-Add to your `~/.zshrc`:
-
-```bash
-# Rawi shell integration
-eval "$(rawi completion zsh)"
-
-# Useful aliases
-alias ask='rawi ask'
-alias chat='rawi ask --continue'
-```
-
-#### PowerShell
-
-Add to your PowerShell profile:
-
-```powershell
-# Rawi shell integration
-Invoke-Expression (&rawi completion powershell)
-
-# Useful aliases
-Set-Alias ask rawi ask
-```
-
-## Updating Rawi
-
-### Update Global Installation
-
-<Tabs>
-  <TabItem label="npm" icon="npm">
-
-    ```bash
-    npm update -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="pnpm" icon="pnpm">
-
-    ```bash
-    pnpm update -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="yarn" icon="seti:yarn">
-
-    ```bash
-    yarn global upgrade rawi
-    ```
-
-  </TabItem>
-  <TabItem label="bun" icon="bun">
-
-    ```bash
-    bun upgrade -g rawi
-    ```
-
-  </TabItem>
-</Tabs>
-
-### Check for Updates
-
-```bash
-# Check current version
-rawi --version
-```
-
-## Troubleshooting Installation
-
-### Common Issues
-
-#### Permission Errors
-
-If you encounter permission errors during global installation:
-
-```bash
-# Use sudo (Linux/macOS)
+# Option 1: Use sudo (not recommended)
 sudo npm install -g rawi
 
-# Or configure npm to use a different directory
+# Option 2: Configure npm to use a different directory
+mkdir ~/.npm-global
 npm config set prefix '~/.npm-global'
-export PATH=~/.npm-global/bin:$PATH
-```
-
-#### Node.js Version Issues
-
-If you have an older Node.js version:
-
-```bash
-# Install Node Version Manager
-curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
-
-# Install latest LTS Node.js
-nvm install --lts
-nvm use --lts
-```
-
-#### Command Not Found
-
-If `rawi` command is not found after installation:
-
-```bash
-# Check if globally installed packages are in PATH
-npm list -g --depth=0
-
-# Add npm global directory to PATH
-export PATH=$(npm config get prefix)/bin:$PATH
-
-# For permanent solution, add to your shell profile
-echo 'export PATH=$(npm config get prefix)/bin:$PATH' >> ~/.bashrc
+echo 'export PATH=~/.npm-global/bin:$PATH' >> ~/.bashrc
 source ~/.bashrc
+npm install -g rawi
 ```
 
-#### Network Issues
+### Windows Installation Issues
+
+If you encounter issues on Windows:
+
+```bash
+# Use PowerShell as Administrator
+npm install -g rawi
+
+# Or use Windows Subsystem for Linux (WSL)
+wsl
+npm install -g rawi
+```
+
+### Node.js Version Issues
+
+If your Node.js version is too old:
+
+```bash
+# Update Node.js using nvm (recommended)
+nvm install node
+nvm use node
+
+# Or download from https://nodejs.org/
+```
+
+### Network Issues
 
 If installation fails due to network issues:
 
 ```bash
-# Use different registry
-npm install -g rawi --registry https://registry.npmjs.org/
+# Use a different registry
+npm install -g rawi --registry https://registry.npmmirror.com
 
-# Clear npm cache
-npm cache clean --force
-
-# Try with increased timeout
-npm install -g rawi --timeout=60000
+# Or use npm with retry
+npm install -g rawi --maxsockets 1
 ```
 
-### Platform-Specific Issues
-
-#### Windows
-
-```powershell
-# Set execution policy for PowerShell
-Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope CurrentUser
-
-# Install using Chocolatey (alternative)
-choco install nodejs
-npm install -g rawi
-```
-
-#### macOS
-
-```bash
-# Install using Homebrew (alternative)
-brew install node
-npm install -g rawi
-
-# Fix potential permission issues
-sudo chown -R $(whoami) $(npm config get prefix)/{lib/node_modules,bin,share}
-```
-
-#### Linux
-
-```bash
-# Install Node.js on Ubuntu/Debian
-curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-sudo apt-get install -y nodejs
-
-# Install Rawi
-npm install -g rawi
-```
-
-## Uninstallation
-
-If you need to remove Rawi:
-
-### Remove Global Installation
-
-<Tabs>
-  <TabItem label="npm" icon="npm">
-
-    ```bash
-    npm uninstall -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="pnpm" icon="pnpm">
-
-    ```bash
-    pnpm remove -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="yarn" icon="seti:yarn">
-
-    ```bash
-    yarn global remove rawi
-    ```
-
-  </TabItem>
-  <TabItem label="bun" icon="bun">
-
-    ```bash
-    bun remove -g rawi
-    ```
-
-  </TabItem>
-</Tabs>
-
-### Remove Configuration
-
-```bash
-# Remove all configuration and data
-rm -rf ~/.config/rawi/
-
-# Remove shell integration (manual removal from shell profile)
-# Edit ~/.bashrc, ~/.zshrc, or PowerShell profile
-```
+---
 
 ## Next Steps
 
-After successful installation:
+Once Rawi is installed and configured:
 
-1. **Configure your first provider**: `rawi configure`
-2. **Ask your first question**: `rawi ask "Hello, world!"`
-3. **Explore features**: `rawi help`
-4. **Read the documentation**: Continue with the [Quick Start Guide](./quickstart)
+1. **Learn the Basics**: Check out the [Quick Start Guide](./quickstart)
+2. **Explore Commands**: Read the [Commands Reference](../reference)
+3. **Set Up Multiple Providers**: Learn about [Profile Management](../advanced/profiles)
+4. **Try Templates**: Explore [Act Templates](../configure/act-templates)
+5. **Advanced Usage**: Discover [Shell Integration](../advanced/shell-integration)
 
-## Getting Help
+---
 
-If you encounter issues during installation:
+## Need Help?
 
-- **Documentation**: Check our [troubleshooting guide](../help/troubleshooting)
-- **Community**: Visit our [GitHub discussions](https://github.com/mkabumattar/rawi/discussions)
-- **Issues**: Report bugs on [GitHub issues](https://github.com/mkabumattar/rawi/issues)
-- **Support**: Contact support at [support@rawi.mkabumattar.com](mailto:support@rawi.mkabumattar.com)
+- **Troubleshooting**: Check our [Troubleshooting Guide](../help/troubleshooting)
+- **FAQ**: Browse [Frequently Asked Questions](../help/faq)
+- **Community**: Join the [GitHub Discussions](https://github.com/withrawi/rawi/discussions)
+- **Issues**: Report bugs on [GitHub Issues](https://github.com/withrawi/rawi/issues)
 
-### Updating
+---
 
-To update Rawi CLI to the latest version, use the same command you used for installation. The package manager will handle the update automatically.
+## Navigation
 
-<Tabs>
-  <TabItem label="pnpm" icon="pnpm">
+- [← Back to Getting Started](.)
+- [Next: Quick Start Guide →](./quickstart)
 
-    ```bash
-    pnpm update -g rawi
-    ```
+Related Pages:
 
-  </TabItem>
-  <TabItem label="npm" icon="npm">
-
-    ```bash
-    npm update -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="yarn" icon="seti:yarn">
-
-    ```bash
-    yarn global upgrade rawi
-    ```
-
-  </TabItem>
-  <TabItem label="bun" icon="bun">
-
-    ```bash
-    bun upgrade -g rawi
-    ```
-
-  </TabItem>
-</Tabs>
-
-### Verify Installation
-
-Check your installed version:
-
-<Tabs>
-  <TabItem label="Linux" icon="linux">
-
-    ```bash withOutput
-    > rawi --version
-
-    rawi/x.x.x linux-x64 node-18.20.2
-    ```
-
-  </TabItem>
-  <TabItem label="macOS">
-
-    ```bash withOutput
-    > rawi --version
-
-    rawi/x.x.x darwin-x64 node-18.20.2
-    ```
-
-  </TabItem>
-  <TabItem label="Windows" icon="seti:windows">
-
-    ```powershell withOutput
-    > rawi --version
-
-    rawi/x.x.x win32-x64 node-18.20.2
-    ```
-
-  </TabItem>
-</Tabs>
-
-If the `rawi` command is not found, ensure your package manager's global bin directory is in your `PATH`. Use the appropriate instructions for your OS and package manager:
-
-<Tabs>
-
-  <TabItem label="Linux/macOS - Global Bin" icon="linux">
-
-    <Tabs>
-      <TabItem label="pnpm" icon="pnpm">
-
-
-        ```bash
-        # Find the global pnpm bin directory
-        pnpm bin -g
-        # Add it to your PATH (if not already present)
-        export PATH="$PATH:$(pnpm bin -g)"
-        # Optionally, add the above line to your ~/.bashrc, ~/.zshrc, or shell profile
-        ```
-
-      </TabItem>
-      <TabItem label="npm" icon="npm">
-
-        ```bash
-        # Find the global npm bin directory
-        npm config get prefix
-        # Add it to your PATH (if not already present)
-        export PATH="$PATH:$(npm config get prefix)/bin"
-        # Optionally, add the above line to your ~/.bashrc, ~/.zshrc, or shell profile
-        ```
-
-      </TabItem>
-
-      <TabItem label="yarn" icon="seti:yarn">
-
-        ```bash
-        # Find the global yarn bin directory
-        yarn global bin
-        # Add it to your PATH (if not already present)
-        export PATH="$PATH:$(yarn global bin)"
-        # Optionally, add the above line to your ~/.bashrc, ~/.zshrc, or shell profile
-        ```
-
-      </TabItem>
-
-      <TabItem label="bun" icon="bun">
-
-        ```bash
-        # Find the global bun bin directory
-        bun bin
-        # Add it to your PATH (if not already present)
-        export PATH="$PATH:$(bun bin)"
-        # Optionally, add the above line to your ~/.bashrc, ~/.zshrc, or shell profile
-        ```
-
-      </TabItem>
-    </Tabs>
-
-  </TabItem>
-
-  <TabItem label="Windows - Global Bin" icon="seti:windows">
-
-    <Tabs>
-      <TabItem label="pnpm" icon="pnpm">
-
-        ```powershell
-        # Find the global pnpm bin directory
-        pnpm bin -g
-        # Add it to your PATH (in System Properties > Environment Variables)
-        # Example (in PowerShell):
-        $env:Path += ";$(pnpm bin -g)"
-        ```
-
-      </TabItem>
-      <TabItem label="npm" icon="npm">
-
-        ```powershell
-        # Find the global npm bin directory
-        npm config get prefix
-        # Add it to your PATH (in System Properties > Environment Variables)
-        # Example (in PowerShell):
-        $env:Path += ";$(npm config get prefix)\bin"
-        ```
-
-      </TabItem>
-
-      <TabItem label="yarn" icon="seti:yarn">
-
-        ```powershell
-        # Find the global yarn bin directory
-        yarn global bin
-        # Add it to your PATH (in System Properties > Environment Variables)
-        # Example (in PowerShell):
-        $env:Path += ";$(yarn global bin)"
-        ```
-
-      </TabItem>
-
-      <TabItem label="bun" icon="bun">
-
-        ```powershell
-        # Find the global bun bin directory
-        bun bin
-        # Add it to your PATH (in System Properties > Environment Variables)
-        # Example (in PowerShell):
-        $env:Path += ";$(bun bin)"
-        ```
-
-      </TabItem>
-    </Tabs>
-
-  </TabItem>
-</Tabs>
-
-## Uninstall Rawi CLI
-
-<Tabs>
-  <TabItem label="pnpm" icon="pnpm">
-
-    ```bash
-    pnpm remove -g rawi
-    ```
-
-  </TabItem>
-  <TabItem label="npm" icon="npm">
-
-    ```bash
-    npm uninstall -g rawi
-    ```
-
-  </TabItem>
-
-  <TabItem label="yarn" icon="seti:yarn">
-
-    ```bash
-    yarn global remove rawi
-    ```
-
-  </TabItem>
-
-  <TabItem label="bun" icon="bun">
-
-    ```bash
-    bun remove -g rawi
-    ```
-
-  </TabItem>
-</Tabs>
-
-### Remove Configuration
-
-```bash
-# Remove all configuration and data
-rm -rf ~/.config/rawi/
-
-# Remove shell integration (manual removal from shell profile)
-# Edit ~/.bashrc, ~/.zshrc, or PowerShell profile
-```
-
-## Next Steps
-
-After successful installation:
-
-1. **Configure your first provider**: `rawi configure`
-2. **Ask your first question**: `rawi ask "Hello, world!"`
-3. **Explore features**: `rawi help`
-4. **Read the documentation**: Continue with the [Quick Start Guide](./quickstart)
-
-## Getting Help
-
-If you encounter issues during installation:
-
-- **Documentation**: Check our [troubleshooting guide](../help/troubleshooting)
-- **Community**: Visit our [GitHub discussions](https://github.com/mkabumattar/rawi/discussions)
-- **Issues**: Report bugs on [GitHub issues](https://github.com/mkabumattar/rawi/issues)
-- **Support**: Contact support at [support@rawi.mkabumattar.com](mailto:support@rawi.mkabumattar.com)
+- [Configuration Guide](../configure)
+- [AI Providers](../configure/providers)
+- [Troubleshooting](../help/troubleshooting)
