--- a/src/content/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/getting-started/quickstart.mdx
@@ -5,6 +5,18 @@ description: Get started with Rawi in just a few minutes! This guide will walk y
 
 Get started with Rawi in just a few minutes! This guide will walk you through your first AI conversation and essential features.
 
+## 📋 Table of Contents
+
+- [Prerequisites](#prerequisites)
+- [Your First Question](#your-first-question)
+- [Understanding Profiles](#understanding-profiles)
+- [Using Act Templates](#using-act-templates)
+- [Session Management](#session-management)
+- [Shell Integration Basics](#shell-integration-basics)
+- [Next Steps](#next-steps)
+
+---
+
 ## Prerequisites
 
 Before starting, make sure you have:
@@ -24,6 +36,8 @@ rawi --version
 # Verify configuration
 rawi info
 ```
+
+---
 
 ## Your First Question
 
@@ -62,6 +76,8 @@ helps prevent common programming errors.
 
 🎉 **Congratulations!** You've just had your first AI conversation with Rawi.
 
+---
+
 ## Understanding Profiles
 
 Profiles allow you to use different AI providers for different tasks. Let's explore your current setup:
@@ -84,509 +100,403 @@ If you have multiple profiles configured:
 # Use a specific profile
 rawi ask "Explain React hooks" --profile work
 
-# Set a default profile
-rawi configure --profile personal --set-default
+# Shorter version
+rawi ask "Explain React hooks" -p work
 ```
 
-### Creating Additional Profiles
+### Create Additional Profiles
 
 ```bash
-# Create a work profile
-rawi configure --profile work --provider anthropic --model claude-3-5-sonnet-20241022
+# Create a profile for local AI
+rawi configure --profile local --provider ollama --model llama3.2
 
-# Create a local profile for privacy
-rawi configure --profile local --provider ollama --model llama2
+# Create a profile for analysis work
+rawi configure --profile analysis --provider anthropic --model claude-3-5-sonnet-20241022
 ```
+
+---
 
 ## Using Act Templates
 
-Act templates are pre-written prompts that make Rawi behave like specific experts:
+Act templates are pre-built prompts that make the AI behave like different experts. They're one of Rawi's most powerful features!
 
-### List Available Templates
+### Browse Available Templates
 
 ```bash
-# Show all available act templates
+# List all templates (interactive)
 rawi act --list
+
+# Show details of a specific template
+rawi act --show code-reviewer
 ```
 
-### Using Templates
+### Use Templates in Questions
 
 ```bash
-# Act as a code reviewer
-rawi ask "Review this function" --act code_reviewer --file mycode.js
+# Get a Linux terminal simulation
+rawi ask --act linux-terminal "list files in home directory with details"
 
-# Act as a Linux terminal
-rawi ask "ls -la" --act linux_terminal
+# Code review assistance
+rawi ask --act code-reviewer "Review this Python function for improvements"
 
-# Act as a technical writer
-rawi ask "Document this API" --act technical_writer
+# Security expert analysis
+rawi ask --act security-expert "What are common web vulnerabilities?"
+
+# Ethereum developer guidance
+rawi ask --act ethereum-developer "Explain smart contract security best practices"
 ```
 
-### Popular Templates
+### Popular Templates for Developers
 
-- **code_reviewer** — Expert code analysis and suggestions
-- **linux_terminal** — Simulates Linux command execution
-- **javascript_console** — JavaScript interpreter behavior
-- **english_translator** — Translation and language help
-- **plagiarism_checker** — Content originality analysis
-- **cyber_security_specialist** — Security-focused advice
+- **`code-reviewer`** — Code analysis and optimization
+- **`linux-terminal`** — Terminal command simulation
+- **`security-expert`** — Security analysis and auditing
+- **`tech-writer`** — Technical documentation
+- **`database-admin`** — SQL optimization and database management
+- **`api-documenter`** — API documentation and examples
+
+---
 
 ## Session Management
 
-Rawi automatically manages conversation sessions for context continuity:
+Sessions allow you to have continuous conversations with context. Each question remembers previous ones in the same session.
 
-### Continue Conversations
+### Basic Session Usage
 
 ```bash
-# Start a conversation
-rawi ask "Explain REST APIs"
+# Start a new session
+rawi ask "I'm building a React app with TypeScript" --new-session
 
-# Continue the conversation (automatic session)
-rawi ask "Now show me an example in Node.js"
+# Continue the conversation (automatically uses current session)
+rawi ask "How should I structure my components?"
 
-# Explicitly continue a specific session
-rawi ask "Add error handling" --continue abc123-def456
+# Ask a follow-up
+rawi ask "What about state management?"
 ```
 
-### Session Commands
+### Working with Specific Sessions
 
 ```bash
-# List recent sessions
+# Continue a specific session later
+rawi ask "What about testing strategies?" --session abc123-def456
+
+# Start a new session for a different topic
+rawi ask "Now I want to learn Python" --new-session
+```
+
+### View Your Sessions
+
+```bash
+# Show recent conversations
 rawi history
 
-# Show specific session
+# Show sessions only
+rawi history sessions
+
+# Show details of a specific session
 rawi history show abc123-def456
-
-# Search conversations
-rawi history --search "REST API"
 ```
 
-## Working with Files
-
-Rawi can analyze and work with your files:
-
-### Single File Analysis
-
-```bash
-# Code review
-rawi ask "Review this code for bugs" --file src/app.js
-
-# Documentation
-rawi ask "Generate README for this project" --file package.json
-
-# Explanation
-rawi ask "Explain what this function does" --file utils.py
-```
-
-### Multiple Files
-
-```bash
-# Analyze multiple files
-rawi ask "Review these components" --file src/Header.jsx --file src/Footer.jsx
-
-# Compare files
-rawi ask "What's the difference between these implementations?" --file old.js --file new.js
-```
-
-### Supported File Types
-
-Rawi works with any text-based file:
-
-- Source code (`.js`, `.py`, `.java`, `.cpp`, etc.)
-- Configuration files (`.json`, `.yaml`, `.toml`)
-- Documentation (`.md`, `.txt`, `.rst`)
-- Data files (`.csv`, `.sql`, `.xml`)
+---
 
 ## Shell Integration Basics
 
-Enhance your terminal workflow with shell integration:
+Rawi integrates seamlessly with your shell, making it perfect for developer workflows.
 
-### Useful Aliases
-
-Add these to your shell profile (`.bashrc`, `.zshrc`):
+### Pipe Input to Rawi
 
 ```bash
-# Quick ask alias
-alias ask='rawi ask'
+# Pipe file content for analysis
+cat server.js | rawi ask "Review this Express.js server for security issues"
 
-# Code review workflow
-alias review='rawi ask --act code_reviewer'
+# Analyze git changes
+git diff | rawi ask "Review these changes and suggest improvements"
 
-# Terminal simulation
-alias term='rawi ask --act linux_terminal'
+# Process command output
+ls -la | rawi ask "Explain these file permissions"
 
-# Quick continuation
-alias chat='rawi ask --continue'
+# Analyze logs
+tail -100 app.log | rawi ask "Summarize these log entries"
 ```
 
-### Command Integration
+### Save Output to Files
 
 ```bash
-# Git commit message helper
-git diff --cached | rawi ask "Write a commit message for these changes"
+# Generate and save code
+rawi ask "Create a TypeScript interface for a User" > user.ts
 
-# Log analysis
-tail -f /var/log/app.log | rawi ask "Analyze these logs for errors"
+# Create documentation
+rawi ask "Write README for a CLI tool" > README.md
 
-# Quick documentation
-ls -la | rawi ask "Explain what these files do" --act technical_writer
+# Generate configurations
+rawi ask "Create ESLint config for React TypeScript" > .eslintrc.js
 ```
 
-### Pipe Integration
+### Combine with Other Tools
 
 ```bash
-# Pipe output to Rawi
-echo "console.log('hello')" | rawi ask "Explain this code"
+# Search and analyze
+grep ERROR app.log | rawi ask "Categorize these errors by type"
 
-# Combine with other tools
-curl -s https://api.github.com/repos/microsoft/vscode | rawi ask "Summarize this repo data"
+# Process API responses
+curl -s api.example.com/data | rawi ask "Explain this API structure"
+
+# Database analysis
+echo "SELECT * FROM users LIMIT 5" | rawi ask --act database-admin "Optimize this query"
 ```
+
+### File Processing
+
+Rawi can directly process various file types including documents, spreadsheets, and presentations:
+
+```bash
+# Analyze PDF documents
+rawi ask --file report.pdf "Summarize the key findings in this report"
+
+# Process Word documents
+rawi ask --file requirements.docx "Extract all functional requirements"
+
+# Analyze Excel spreadsheets
+rawi ask --file data.xlsx "What trends do you see in this data?"
+
+# Review multiple files
+rawi ask --files package.json README.md "Compare this project's setup with its documentation"
+
+# Batch process source code
+rawi ask --batch "src/**/*.js" --act code-reviewer "Review all JavaScript files for security issues"
+
+# Process files in parallel for speed
+rawi ask --batch "docs/**/*.md" --parallel "Create a documentation index"
+```
+
+---
+
+## Essential Commands Cheat Sheet
+
+### Basic Usage
+
+```bash
+# Simple question
+rawi ask "Your question here"
+
+# With specific profile
+rawi ask "Your question" --profile work
+
+# With expert template
+rawi ask --act code-reviewer "Your code question"
+
+# Start new session
+rawi ask "Your question" --new-session
+```
+
+### Configuration
+
+```bash
+# Interactive setup
+rawi configure
+
+# Show current config
+rawi configure --show
+
+# List all profiles
+rawi configure --list
+```
+
+### History & Sessions
+
+```bash
+# Show recent conversations
+rawi history
+
+# Search conversations
+rawi history --search "docker"
+
+# Show session details
+rawi history show session-id
+```
+
+### Information
+
+```bash
+# System info
+rawi info
+
+# Available providers
+rawi provider --list
+
+# Available templates
+rawi act --list
+```
+
+---
 
 ## Common Use Cases
 
-### Development Workflow
+### Code Development
 
 ```bash
+# Debug an error
+rawi ask "Fix this Python error: NameError: name 'x' is not defined"
+
 # Code review
-rawi ask "Review this PR for security issues" --file changes.diff --act cyber_security_specialist
+git diff | rawi ask --act code-reviewer "Review these changes"
 
-# Debug assistance
-rawi ask "Why is this code throwing an error?" --file buggy.py
+# Review source code files
+rawi ask --file src/app.js --act code-reviewer "Review this code for best practices"
 
-# Optimization
-rawi ask "How can I optimize this database query?" --file slow_query.sql
+# Generate tests
+cat utils.js | rawi ask "Generate unit tests for these functions"
+
+# Create documentation
+rawi ask --act tech-writer "Document this API endpoint" < api.js
+
+# Batch process source files
+rawi ask --batch "src/**/*.{js,ts}" --act code-reviewer "Find potential security issues"
 ```
 
-### Learning and Exploration
+### Document Processing
 
 ```bash
-# Concept explanation
-rawi ask "Explain microservices architecture with examples"
+# Analyze PDF reports
+rawi ask --file quarterly-report.pdf "Extract key performance metrics"
 
-# Technology comparison
-rawi ask "Compare React vs Vue.js for a new project" --profile work
+# Process Word documents
+rawi ask --file meeting-notes.docx "Create action items from these meeting notes"
 
-# Tutorial creation
-rawi ask "Create a beginner's guide to Docker" --act technical_writer
+# Analyze Excel data
+rawi ask --file sales-data.xlsx "Identify top-performing products and regions"
+
+# Compare multiple documents
+rawi ask --files proposal-v1.docx proposal-v2.docx "What are the key differences?"
+
+# Process presentations
+rawi ask --file slides.pptx "Summarize the main points from this presentation"
 ```
 
-### Content Creation
+### Learning & Research
 
 ```bash
-# Blog writing
-rawi ask "Write a blog post about AI in software development" --act content_writer
+# Quick explanations
+rawi ask "Explain async/await in JavaScript"
 
-# Documentation
-rawi ask "Create API documentation for this endpoint" --file api.js --act technical_writer
+# Compare technologies
+rawi ask "Compare React vs Vue.js for a small project"
 
-# README generation
-rawi ask "Generate a comprehensive README" --file package.json
+# Best practices
+rawi ask --act security-expert "Web security best practices for Node.js"
 ```
 
 ### Data Analysis
 
 ```bash
-# CSV analysis
-rawi ask "Analyze this sales data and find trends" --file sales.csv --act data_analyst
+# Analyze CSV data
+cat data.csv | rawi ask "Analyze this sales data and identify trends"
 
-# Log interpretation
-rawi ask "Find error patterns in these logs" --file error.log
+# Process logs
+grep ERROR app.log | rawi ask "What types of errors are most common?"
 
-# Performance review
-rawi ask "Analyze this performance report" --file metrics.json
+# Explain data structures
+echo '{"users": [{"id": 1, "name": "John"}]}' | rawi ask "Explain this JSON structure"
 ```
 
-## Configuration Best Practices
+---
 
-### Multiple Provider Setup
+## Tips for Better Results
+
+### 1. Be Specific
 
 ```bash
-# Fast responses for quick questions
-rawi configure --profile quick --provider openai --model gpt-3.5-turbo --temperature 0.3
+# ❌ Vague
+rawi ask "Help with code"
 
-# Cost-effective with reasoning
-rawi configure --profile budget --provider deepseek --model deepseek-chat --temperature 0.2
-
-# European AI with GDPR compliance
-rawi configure --profile europe --provider mistral --model mistral-large-latest --temperature 0.5
-
-# Ultra-fast inference
-rawi configure --profile speed --provider cerebras --model llama3.1-70b --temperature 0.7
-
-# Detailed analysis
-rawi configure --profile detailed --provider anthropic --model claude-3-5-sonnet-20241022 --temperature 0.1
-
-# Local privacy-focused
-rawi configure --profile local --provider ollama --model llama3.2
-
-# Work environment
-rawi configure --profile work --provider azure --model gpt-4 --resource-name company-ai
+# ✅ Specific
+rawi ask "Review this React component for performance issues" < component.jsx
 ```
 
-### Environment-Specific Profiles
+### 2. Use Templates for Expertise
 
 ```bash
-# Development environment
-rawi configure --profile dev --provider openai --model gpt-4o --temperature 0.2
+# ❌ Generic
+rawi ask "Check my database query"
 
-# Production support
-rawi configure --profile prod --provider anthropic --model claude-3-5-sonnet-20241022 --temperature 0.1
-
-# Research and experimentation
-rawi configure --profile research --provider google --model gemini-1.5-pro --temperature 0.8
+# ✅ With expert template
+rawi ask --act database-admin "Optimize this SQL query for performance" < query.sql
 ```
 
-## Troubleshooting
-
-### Common Issues
-
-**Command not found:**
+### 3. Provide Context
 
 ```bash
-# Verify installation
-which rawi
-rawi --version
+# ❌ No context
+rawi ask "Fix this error"
+
+# ✅ With context
+rawi ask "Fix this Python Flask error in a REST API: AttributeError: 'NoneType'"
 ```
 
-**No providers configured:**
+### 4. Use Sessions for Complex Topics
 
 ```bash
-# Run interactive configuration
-rawi configure
+# Start a session for a project
+rawi ask "I'm building a microservices architecture with Node.js" --new-session
 
-# Check current status
-rawi info
+# Continue building context
+rawi ask "How should I handle authentication between services?"
+rawi ask "What about database design for this architecture?"
 ```
 
-**API key issues:**
-
-```bash
-# Test configuration
-rawi configure --test
-
-# Reconfigure provider
-rawi configure --provider openai --api-key sk-new-key
-```
-
-**Session not found:**
-
-```bash
-# List available sessions
-rawi history
-
-# Start new session
-rawi ask "Hello" --new-session
-```
-
-### Getting Help
-
-```bash
-# Command help
-rawi --help
-rawi ask --help
-
-# Provider information
-rawi info --providers
-
-# Debug mode
-rawi --debug ask "test question"
-```
+---
 
 ## Next Steps
 
-Now that you're comfortable with the basics:
+Now that you're familiar with the basics, explore these advanced features:
 
-1. **Explore Advanced Features**:
-   - [Session Management](../advanced/sessions)
-   - [Profile Configuration](../advanced/profiles)
-   - [Shell Integration](../advanced/shell-integration)
+1. **[Configuration Guide](../configure)** — Set up multiple providers and profiles
+2. **[Act Templates](../configure/act-templates)** — Master the 200+ expert templates
+3. **[Shell Integration](../advanced/shell-integration)** — Advanced terminal workflows
+4. **[Session Management](../advanced/sessions)** — Deep dive into conversations
+5. **[Commands Reference](../reference)** — Complete command documentation
 
-2. **Learn Workflows**:
-   - [Development Workflow](../workflows/development)
-   - [Content Creation](../workflows/content-creation)
-   - [Research Workflow](../workflows/research)
+### Explore Comprehensive Workflows
 
-3. **Configure More Providers**:
-   - [Supported Providers](../configure/providers)
-   - [Environment Variables](../configure/envvars)
+Ready to integrate Rawi into your daily work? Check out these comprehensive workflow guides:
 
-4. **Join the Community**:
-   - [GitHub Discussions](https://github.com/mkabumattar/rawi/discussions)
-   - [Report Issues](https://github.com/mkabumattar/rawi/issues)
+#### 🛠️ Development Workflows
 
-## Quick Reference
+- **[Code Review Workflow](../workflows/code-review)** — Automated code analysis and security auditing
+- **[Git Integration Workflow](../workflows/git-integration)** — Smart commit messages and repository insights
+- **[API Development Workflow](../workflows/api-development)** — Design, implement, and document APIs
+- **[Testing Workflow](../workflows/testing)** — Comprehensive testing strategies and automation
+- **[Documentation Generation](../workflows/documentation-generation)** — Auto-generate project documentation
 
-### Essential Commands
+#### 📊 Data & Analysis
 
-```bash
-# Configuration
-rawi configure                          # Interactive setup
-rawi configure --list                   # List profiles
-rawi info                              # System information
+- **[Data Analysis Workflow](../workflows/data-analysis)** — Statistical analysis, ML, and data visualization
 
-# Conversations
-rawi ask "question"                     # Basic question
-rawi ask "question" --file code.js      # With file context
-rawi ask "question" --act expert        # With act template
-rawi ask "question" --profile work      # Specific profile
+#### ✍️ Content & Research
 
-# History
-rawi history                           # List sessions
-rawi history --search "keyword"        # Search conversations
-rawi history show session-id           # Show specific session
+- **[Content Creation Workflow](../workflows/content-creation)** — Research, write, and optimize content
+- **[Research Workflow](../workflows/research)** — Information gathering and analysis
 
-# Templates
-rawi act --list                        # List all templates
-rawi act --search "code"               # Search templates
-```
+Each workflow includes step-by-step instructions, automation scripts, and best practices for integrating AI assistance into your specific domain.
 
-### Useful Aliases
+---
 
-```bash
-alias ask='rawi ask'
-alias review='rawi ask --act code_reviewer'
-alias explain='rawi ask --act explainer'
-alias fix='rawi ask --act debugger'
-```
+## Need Help?
 
-Happy chatting with AI! 🤖✨
+- **Stuck?** Check the [Troubleshooting Guide](../help/troubleshooting)
+- **Questions?** Browse the [FAQ](../help/faq)
+- **More Examples?** See [Workflow Guides](../workflows)
+- **Community?** Join [GitHub Discussions](https://github.com/withrawi/rawi/discussions)
 
-**TypeScript:**
+---
 
-- Superset of JavaScript with static typing
-- Compile-time type checking
-- Compiles to JavaScript
-- Helps catch errors early in development
-- Better tooling and IDE support
+## Navigation
 
-The main advantage of TypeScript is that it helps prevent common programming errors by catching them during development rather than at runtime.
+- [← Back to Installation](./install)
+- [Next: Configuration Guide →](../configure)
 
-````
+Related Pages:
 
-## Understanding Profiles
-
-Profiles let you use different AI providers and settings for different projects:
-
-```bash
-# List available profiles
-rawi configure --list
-
-# Create a new profile for work projects
-rawi configure --profile work --provider openai --model gpt-4
-
-# Use a specific profile
-rawi ask --profile work "How do I optimize this SQL query?"
-````
-
-## Using Act Templates
-
-Act templates transform your AI into specialized experts:
-
-```bash
-# Browse available templates
-rawi act --list
-
-# Use a template for code review
-rawi ask --act code-reviewer "Review this Python function for improvements"
-
-# Get help with Linux commands
-rawi ask --act linux-terminal "Find all files larger than 100MB"
-```
-
-### Popular Templates
-
-- `software-engineer` — General development help
-- `code-reviewer` — Code analysis and improvements
-- `linux-terminal` — Command line assistance
-- `technical-writer` — Documentation help
-- `data-scientist` — Data analysis and visualization
-
-## Session Management
-
-Sessions maintain conversation context across multiple questions:
-
-```bash
-# Start a new session
-rawi ask --new-session "I'm building a REST API in Node.js"
-
-# Continue the conversation (Rawi remembers the context)
-rawi ask "What's the best way to handle authentication?"
-rawi ask "How do I add rate limiting?"
-
-# List your sessions
-rawi history --sessions
-
-# Continue a previous session
-rawi ask --session abc123 "Can you explain JWT tokens?"
-```
-
-## Shell Integration Basics
-
-Rawi works perfectly with shell pipes and redirects:
-
-```bash
-# Analyze log files
-tail -f app.log | rawi ask "Summarize any errors in this log"
-
-# Code analysis
-cat src/app.js | rawi ask --act code-reviewer "Review this code"
-
-# Save AI responses
-rawi ask "Explain Docker containers" > docker-notes.txt
-
-# Process data
-curl -s api/data.json | rawi ask "Analyze this JSON data"
-```
-
-## Essential Commands
-
-Here are the commands you'll use most often:
-
-```bash
-# Basic question
-rawi ask "your question here"
-
-# With template
-rawi ask --act template-name "your question"
-
-# With profile
-rawi ask --profile work "your question"
-
-# Continue session
-rawi ask --session session-id "follow-up question"
-
-# Get help
-rawi --help
-rawi ask --help
-```
-
-## Next Steps
-
-Now that you're familiar with the basics:
-
-1. **Explore Templates** — Run `rawi act --list` to see all available expert templates
-2. **Set Up Multiple Profiles** — Configure different providers for different projects
-3. **Learn Advanced Features** — Check out [Shell Integration](../advanced/shell-integration) and [Workflows](../workflows)
-4. **Join the Community** — Visit our [GitHub repository](https://github.com/withrawi/rawi) for updates and discussions
-
-## Common First-Time Issues
-
-**"No provider configured"**
-
-```bash
-rawi configure  # Run interactive setup
-```
-
-**"API key not found"**
-
-```bash
-rawi configure --provider openai --api-key your-key-here
-```
-
-**"Command not found"**
-
-```bash
-npm install -g rawi  # Reinstall globally
-```
-
-Happy coding with Rawi! 🚀
+- [Commands Reference](../reference)
+- [Act Templates](../configure/act-templates)
+- [Session Management](../advanced/sessions)
