Refactor documentation: Remove Qwen provider references, enhance history command details, and introduce file reading capabilities
- Removed references to the Qwen provider from configuration and provider documentation.
- Updated history command documentation to clarify usage, options, and subcommands for ask and chat sessions.
- Added comprehensive file reading and document processing guide, detailing supported formats and usage examples.
- Introduced a new chat command documentation for managing interactive sessions and long-form discussions.

--- a/src/content/docs/configure/settings.mdx
+++ b/src/content/docs/configure/settings.mdx
@@ -59,14 +59,14 @@ Each top-level key is a profile name (e.g., `default`, `openai`, `gemini`, etc.)
 ```json
 {
   "default": {
-    "provider": "qwen",
-    "model": "qwen-plus",
+    "provider": "openai",
+    "model": "gpt-4o",
     "apiKey": "test_api_key",
     "temperature": 0.7,
     "maxTokens": 2048,
     "language": "english",
     "providerSettings": {
-      "baseURL": "https://custom.qwen.endpoint.com/v1"
+      "baseURL": "https://api.openai.com/v1"
     }
   },
   "openai": {
