--- a/src/content/docs/help/faq.mdx
+++ b/src/content/docs/help/faq.mdx
@@ -14,7 +14,7 @@ Rawi is a powerful command-line interface (CLI) tool that brings AI assistance d
 ### How is Rawi different from other AI tools?
 
 - **Terminal-native**: Works directly in your command line
-- **Multiple providers**: Support for OpenAI, Anthropic, Google, DeepSeek, Mistral, Cerebras, Ollama, LM Studio, Azure, Bedrock, Qwen, and xAI
+- **Multiple providers**: Support for OpenAI, Anthropic, Google, DeepSeek, Mistral, Cerebras, Ollama, LM Studio, Azure, Bedrock, and xAI
 - **Session management**: Maintain conversation context across commands
 - **Act templates**: Pre-built prompts for specific tasks
 - **Shell integration**: Pipe data in/out of other commands
