--- a/src/content/docs/reference/provider.mdx
+++ b/src/content/docs/reference/provider.mdx
@@ -86,13 +86,6 @@ rawi provider --models ollama
 - **Setup**: API key required
 - **Best for**: Real-time information, conversational AI
 
-#### Qwen
-
-- **Type**: Cloud-based
-- **Models**: Qwen-turbo, Qwen-plus, Qwen-max
-- **Setup**: API key required
-- **Best for**: Multilingual support, efficiency
-
 ### Enterprise Providers
 
 #### Azure OpenAI
@@ -236,7 +229,7 @@ rawi configure --provider azure --model gpt-4 --api-key your-key --base-url http
 - **Code**: OpenAI GPT-4, Code Llama
 - **Writing**: Anthropic Claude, OpenAI GPT-4
 - **Analysis**: Google Gemini, Anthropic Claude
-- **Multilingual**: Qwen, OpenAI GPT-4
+- **Multilingual**: OpenAI GPT-4, Google Gemini
 
 ## Troubleshooting
 
