--- a/src/content/docs/configure/providers.mdx
+++ b/src/content/docs/configure/providers.mdx
@@ -1,13 +1,13 @@
 ---
 title: Supported Providers
-description: Comprehensive guide to AI providers supported by Rawi CLI, including OpenAI, Anthropic, Google, Ollama, Azure, Bedrock, Qwen, and xAI.
+description: Comprehensive guide to AI providers supported by Rawi CLI, including OpenAI, Anthropic, Google, Ollama, Azure, Bedrock, and xAI.
 ---
 
 import {Tabs, TabItem, Steps, Aside} from '@astrojs/starlight/components';
 
 # Supported AI Providers
 
-Rawi CLI supports 12 major AI providers, giving you access to dozens of models from leading companies. Whether you need cloud-based power or local privacy, there's a provider configuration for your use case.
+Rawi CLI supports 11 major AI providers, giving you access to dozens of models from leading companies. Whether you need cloud-based power or local privacy, there's a provider configuration for your use case.
 
 <Aside type="tip">
   Use `rawi info --providers` to see all available providers and their models in
@@ -29,7 +29,6 @@ Rawi CLI supports 12 major AI providers, giving you access to dozens of models f
     - **Cerebras** - Ultra-fast inference with WSE technology
     - **Azure OpenAI** - Enterprise OpenAI models
     - **Amazon Bedrock** - Multi-vendor model access
-    - **Qwen** - Alibaba's language models
     - **xAI** - Grok models from Elon Musk's company
 
   </TabItem>
@@ -39,7 +38,7 @@ Rawi CLI supports 12 major AI providers, giving you access to dozens of models f
     
     - **Ollama** - 100+ open-source models
       - Llama 3.2, Mistral, CodeLlama
-      - Qwen, Phi, Gemma, and more
+      - Phi, Gemma, and more
       - No API key required
       - Complete privacy and control
 
@@ -64,7 +63,6 @@ Rawi CLI supports 12 major AI providers, giving you access to dozens of models f
 | **LM Studio** | Local model management    | Ollama models        | Easy             |
 | **Azure**     | Enterprise environments   | GPT-4 (Enterprise)   | Medium           |
 | **Bedrock**   | AWS ecosystem             | Claude, Llama, Titan | Hard             |
-| **Qwen**      | Chinese language tasks    | Qwen-Max             | Easy             |
 | **xAI**       | Experimental features     | Grok-2               | Easy             |
 
 ## Provider Details
@@ -274,7 +272,6 @@ Run open-source models locally for privacy and control. No API key required.
 - `llama3.2:latest` - Meta's latest Llama model
 - `mistral:latest` - Mistral AI's flagship model
 - `codellama:latest` - Specialized for code generation
-- `qwen2.5:latest` - Alibaba's multilingual model
 - `phi3:latest` - Microsoft's compact model
 
 **Configuration:**
@@ -417,31 +414,6 @@ rawi configure --provider bedrock \
 - Multi-model experimentation
 - Enterprise AWS environments
 - Regulated industries
-
-### Qwen
-
-Alibaba's Qwen models, particularly strong for Chinese language tasks.
-
-**Available Models:**
-
-- `qwen-max` - Most capable model
-- `qwen-plus` - Balanced performance
-- `qwen-turbo` - Fast and efficient
-
-**Configuration:**
-
-```bash
-rawi configure --provider qwen \
-  --model qwen-max \
-  --api-key sk-your-qwen-key
-```
-
-**Use Cases:**
-
-- Chinese language processing
-- Multilingual applications
-- Asian market applications
-- Cross-cultural content
 
 ### xAI (Grok)
 
@@ -605,7 +577,6 @@ rawi configure --profile private \
    - **Anthropic**: [console.anthropic.com](https://console.anthropic.com/)
    - **Google**: [aistudio.google.com](https://aistudio.google.com/app/apikey)
    - **xAI**: [console.x.ai](https://console.x.ai/)
-   - **Qwen**: [dashscope.aliyun.com](https://dashscope.aliyun.com/)
 
 3. **Set up enterprise providers:**
    - **Azure**: Contact your Azure administrator
